--- a/index.html
+++ b/index.html
@@ -27,17 +27,97 @@
       </div>
     </header>
 
-
     <!--Home-->
 
     <section id="home">
       <div>
         <h3>bem vindo a PizzaHash!</h3>
-        <p>Descubra o sabos autêntico das nossas pizzas artesanais, preparadas com ingredientes frescos e de alta qualidade.</p>
+        <p>
+          Descubra o sabos autêntico das nossas pizzas artesanais, preparadas
+          com ingredientes frescos e de alta qualidade.
+        </p>
         <a href="#">Faça o seu pedido</a>
       </div>
-
     </section>
+
+    <!--Sobre/ About-->
+    <section id="about">
+      <h1><span>Sobre </span>nós</h1>
+      <div>
+        <img src="images/sobre.jpg" alt="Uma pizzaria em uma esquina" />
+      </div>
+
+      <div>
+        <h3>O que torna a PizzaHass única?</h3>
+        <p>
+          Na PizzaHash, não é apenas sobre pizza- É sobre criar experiências
+          memoráveis. Fundada com a paixão por comida de qualidade e um
+          compromisso com a excelência, nossa pizzaria combina tradição e
+          inovação para oferecer o melhor em cada fatia.
+        </p>
+        <p>
+          Nossos ingredientes são cuidadosamente selecionados para garantir a
+          satisfação para garantir frescor e sabor. Usamos técnicas de preparo
+          artesanais para criar massas incrivelmente leves e crocantes e nossos
+          molhos são feitos a partir de tomates e especiarias únicas.
+        </p>
+        <a href="#">Saiba mias</a>
+      </div>
+    </section>
+
+    <!--Menu-->
+    <section id="menu">
+      <h1><span>Nosso </span>menu</h1>
+      <div class="box-container">
+        <div class="box">
+          <img src="images/pizza_item_1.jpg" alt="Explosão de peperoni" />
+          <h3>Explosão de peperoni</h3>
+          <div>R$55.99 <span>60.99</span></div>
+          <a href="#">Adicionar ao carrinho</a>
+        </div>
+
+        <div class="box">
+          <img src="images/pizza_item_2.jpg" alt="Aventuras Vegetais" />
+          <h3>Aventuras Vegetais</h3>
+          <div>R$45.99 <span>60.99</span></div>
+          <a href="#">Adicionar ao carrinho</a>
+        </div>
+
+        <div class="box">
+          <img src="images/pizza_item_3.jpg" alt="Mediterrânea Delicia" />
+          <h3>Mediterrânea Delicia</h3>
+          <div>R$75.99 <span>80.99</span></div>
+          <a href="#">Adicionar ao carrinho</a>
+        </div>
+
+        <div class="box">
+          <img src="images/pizza_item_4.jpg" alt="Pomodoro do Campo" />
+          <h3>Pomodoro do Campo</h3>
+          <div>R$45.99 <span>50.99</span></div>
+          <a href="#">Adicionar ao carrinho</a>
+        </div>
+
+        <div class="box">
+          <img src="images/pizza_item_5.jpg" alt="Lusitana Colorida" />
+          <h3>Lusitana Colorida</h3>
+          <div>R$55.99 <span>60.99</span></div>
+          <a href="#">Adicionar ao carrinho</a>
+        </div>
+
+        <div class="box">
+          <img src="images/pizza_item_6.jpg" alt="Saborosa Lava" />
+          <h3>Saborosa Lava</h3>
+          <div>R$55.99 <span>100.00</span></div>
+          <a href="#">Adicionar ao carrinho</a>
+        </div>
+      </div>
+    </section>
+
+    <!--Products / Promoções-->
+    <section>
+      
+    </section>
+
     <!--<ion-icon name="heart"></ion-icon> heart-->
     <!--<ion-icon name="eye"></ion-icon> eye-->
     <!--<ion-icon name="star"></ion-icon> Star-->
