--- a/index.html
+++ b/index.html
@@ -114,13 +114,149 @@
     </section>
 
     <!--Products / Promoções-->
-    <section>
-      
+    <section id="Products">
+      <h1><span>Combos e </span>Promoções</h1>
+      <div class="box-container">
+        <div class="box">
+          <div>
+            <a href="#menu"><ion-icon name="cart"></ion-icon></a>
+            <a href="#"><ion-icon name="heart"></ion-icon></a>
+            <a href="#"><ion-icon name="eye"></ion-icon></a>
+          </div>
+          <div>
+            <img src="images/promo_1.jpg" alt="Pizza com coca-cola" />
+          </div>
+          <div>
+            <h3>Pizza + Refrigerante 2L</h3>
+            <div>
+              <i><ion-icon name="star"></ion-icon></i>
+              <i><ion-icon name="star"></ion-icon></i>
+              <i><ion-icon name="star"></ion-icon></i>
+              <i><ion-icon name="star"></ion-icon></i>
+            </div>
+          </div>
+          <div>R$65.00 <span>a partir</span></div>
+        </div>
+
+        <div class="box">
+          <div>
+            <a href="#menu"><ion-icon name="cart"></ion-icon></a>
+            <a href="#"><ion-icon name="heart"></ion-icon></a>
+            <a href="#"><ion-icon name="eye"></ion-icon></a>
+          </div>
+          <div>
+            <img src="images/promo_2.jpg" alt="Pizza com lata de pepsi" />
+          </div>
+          <div>
+            <h3>Pizza + Refrigerante 350ml</h3>
+            <div>
+              <i><ion-icon name="star"></ion-icon></i>
+              <i><ion-icon name="star"></ion-icon></i>
+              <i><ion-icon name="star"></ion-icon></i>
+              <i><ion-icon name="star"></ion-icon></i>
+              <i><ion-icon name="star"></ion-icon></i>
+            </div>
+          </div>
+          <div>R$50.00 <span>a partir</span></div>
+        </div>
+        <div class="box">
+          <div>
+            <a href="#menu"><ion-icon name="cart"></ion-icon></a>
+            <a href="#"><ion-icon name="heart"></ion-icon></a>
+            <a href="#"><ion-icon name="eye"></ion-icon></a>
+          </div>
+          <div>
+            <img src="images/promo_3.jpg" alt="Pizza com coca-cola" />
+          </div>
+          <div>
+            <h3>Pizza + Refrigerante 600ml</h3>
+            <div>
+              <i><ion-icon name="star"></ion-icon></i>
+              <i><ion-icon name="star"></ion-icon></i>
+              <i><ion-icon name="star"></ion-icon></i>
+              <i><ion-icon name="star"></ion-icon></i>
+              <ion-icon name="star-half"></ion-icon>
+            </div>
+          </div>
+          <div>R$55.00 <span>a partir</span></div>
+        </div>
+      </div>
     </section>
 
-    <!--<ion-icon name="heart"></ion-icon> heart-->
-    <!--<ion-icon name="eye"></ion-icon> eye-->
-    <!--<ion-icon name="star"></ion-icon> Star-->
+    <!--Review /Avaliações-->
+    <section id="review">
+      <h1><span>O que nossos </span> clientes dizem</h1>
+
+      <div class="box-container">
+        <div class="box">
+        <p>
+          Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quidem,
+          deleniti totam, necessitatibus aliquam porro laudantium minima
+          inventore repellat commodi saepe tempora consequuntur sit vel!
+          Accusamus quis veniam harum non aspernatur?
+          <img src="images/cliente_1.jpg" alt="Foto de um rapaz">
+          <h3>Alon Pinheiro</h3>
+          <div>
+            <i><ion-icon name="star"></ion-icon></i>
+            <i><ion-icon name="star"></ion-icon></i>
+            <i><ion-icon name="star"></ion-icon></i>
+            <i><ion-icon name="star"></ion-icon></i>
+            <i><ion-icon name="star-half"></ion-icon></i>
+          </div>
+        </p>
+        </div>
+
+        <div class="box">
+        <p>
+          Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quidem,
+          deleniti totam, necessitatibus aliquam porro laudantium minima
+          inventore repellat commodi saepe tempora consequuntur sit vel!
+          Accusamus quis veniam harum non aspernatur?
+          <img src="images/cliente_2.jpg" alt="Foto de um rapaz">
+          <h3>João Lira</h3>
+          <div>
+            <i><ion-icon name="star"></ion-icon></i>
+            <i><ion-icon name="star"></ion-icon></i>
+            <i><ion-icon name="star"></ion-icon></i>
+            <i><ion-icon name="star"></ion-icon></i>
+            <i><ion-icon name="star"></ion-icon></i>
+
+            
+          </div>
+        </p>
+        </div>
+
+        <div class="box">
+        <p>
+          Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quidem,
+          deleniti totam, necessitatibus aliquam porro laudantium minima
+          inventore repellat commodi saepe tempora consequuntur sit vel!
+          Accusamus quis veniam harum non aspernatur?
+          <img src="images/cliente_3.jpg" alt="Foto de um rapaz">
+          <h3>daniel Porto</h3>
+          <div>
+            <i><ion-icon name="star"></ion-icon></i>
+            <i><ion-icon name="star"></ion-icon></i>
+            <i><ion-icon name="star"></ion-icon></i>
+            <i><ion-icon name="star-half"></ion-icon></i>
+          </div>
+        </p>
+        </div>
+      </div>
+    </section>
+
+    <!--Footer / Rodapé-->
+    <footer class=" footer">
+      <div class="container">
+        <div class="footer-col">
+          <h4 class="heading-footer">Pizza <span>Hash</span></h4>
+</div>
+
+      </div>
+
+    </footer>
+
+    <!--Star-->
     <!--<ion-icon name="star-half"></ion-icon> hal star-->
     <!--<ion-icon name="logo-facebook"></ion-icon> facebook-->
     <!--<ion-icon name="logo-instagram"></ion-icon> instagram-->
