--- a/index.html
+++ b/index.html
@@ -1,266 +1,305 @@
 <!doctype html>
 <html lang="pt-br">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Landing Page PizzaHash</title>
-    <link rel="stylesheet" href="style.css" />
-  </head>
-  <body>
-    <!--HEADER-->
-    <header>
-      <a href="#">
-        <img src="images/logo.jpg" alt="Logo da pizzaria PizzaHash" />
-      </a>
-      <nav>
-        <a href="#home">home</a>
-        <a href="#about">sobre</a>
-        <a href="#menu">menu</a>
-        <a href="#products">promoções</a>
-        <a href="#review">avaliações</a>
-      </nav>
-      <div>
-        <div><ion-icon name="person"></ion-icon></div>
-        <div><ion-icon name="search"></ion-icon></div>
-        <div><ion-icon name="cart"></ion-icon></div>
-        <div><ion-icon name="menu"></ion-icon></div>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Landing Page PizzaHash</title>
+  <link rel="stylesheet" href="style.css" />
+</head>
+
+<body>
+  <!--HEADER-->
+  <header>
+    <a href="#">
+      <img src="images/logo.jpg" alt="Logo da pizzaria PizzaHash" />
+    </a>
+    <nav>
+      <a href="#home">home</a>
+      <a href="#about">sobre</a>
+      <a href="#menu">menu</a>
+      <a href="#products">promoções</a>
+      <a href="#review">avaliações</a>
+    </nav>
+    <div>
+      <div><ion-icon name="person"></ion-icon></div>
+      <div><ion-icon name="search"></ion-icon></div>
+      <div><ion-icon name="cart"></ion-icon></div>
+      <div><ion-icon name="menu"></ion-icon></div>
+    </div>
+  </header>
+
+  <!--Home-->
+
+  <section id="home">
+    <div>
+      <h3>bem vindo a PizzaHash!</h3>
+      <p>
+        Descubra o sabos autêntico das nossas pizzas artesanais, preparadas
+        com ingredientes frescos e de alta qualidade.
+      </p>
+      <a href="#">Faça o seu pedido</a>
+    </div>
+  </section>
+
+  <!--Sobre/ About-->
+  <section id="about">
+    <h1><span>Sobre </span>nós</h1>
+    <div>
+      <img src="images/sobre.jpg" alt="Uma pizzaria em uma esquina" />
+    </div>
+
+    <div>
+      <h3>O que torna a PizzaHass única?</h3>
+      <p>
+        Na PizzaHash, não é apenas sobre pizza- É sobre criar experiências
+        memoráveis. Fundada com a paixão por comida de qualidade e um
+        compromisso com a excelência, nossa pizzaria combina tradição e
+        inovação para oferecer o melhor em cada fatia.
+      </p>
+      <p>
+        Nossos ingredientes são cuidadosamente selecionados para garantir a
+        satisfação para garantir frescor e sabor. Usamos técnicas de preparo
+        artesanais para criar massas incrivelmente leves e crocantes e nossos
+        molhos são feitos a partir de tomates e especiarias únicas.
+      </p>
+      <a href="#">Saiba mias</a>
+    </div>
+  </section>
+
+  <!--Menu-->
+  <section id="menu">
+    <h1><span>Nosso </span>menu</h1>
+    <div class="box-container">
+      <div class="box">
+        <img src="images/pizza_item_1.jpg" alt="Explosão de peperoni" />
+        <h3>Explosão de peperoni</h3>
+        <div>R$55.99 <span>60.99</span></div>
+        <a href="#">Adicionar ao carrinho</a>
       </div>
-    </header>
 
-    <!--Home-->
-
-    <section id="home">
-      <div>
-        <h3>bem vindo a PizzaHash!</h3>
-        <p>
-          Descubra o sabos autêntico das nossas pizzas artesanais, preparadas
-          com ingredientes frescos e de alta qualidade.
-        </p>
-        <a href="#">Faça o seu pedido</a>
-      </div>
-    </section>
-
-    <!--Sobre/ About-->
-    <section id="about">
-      <h1><span>Sobre </span>nós</h1>
-      <div>
-        <img src="images/sobre.jpg" alt="Uma pizzaria em uma esquina" />
+      <div class="box">
+        <img src="images/pizza_item_2.jpg" alt="Aventuras Vegetais" />
+        <h3>Aventuras Vegetais</h3>
+        <div>R$45.99 <span>60.99</span></div>
+        <a href="#">Adicionar ao carrinho</a>
       </div>
 
-      <div>
-        <h3>O que torna a PizzaHass única?</h3>
-        <p>
-          Na PizzaHash, não é apenas sobre pizza- É sobre criar experiências
-          memoráveis. Fundada com a paixão por comida de qualidade e um
-          compromisso com a excelência, nossa pizzaria combina tradição e
-          inovação para oferecer o melhor em cada fatia.
-        </p>
-        <p>
-          Nossos ingredientes são cuidadosamente selecionados para garantir a
-          satisfação para garantir frescor e sabor. Usamos técnicas de preparo
-          artesanais para criar massas incrivelmente leves e crocantes e nossos
-          molhos são feitos a partir de tomates e especiarias únicas.
-        </p>
-        <a href="#">Saiba mias</a>
+      <div class="box">
+        <img src="images/pizza_item_3.jpg" alt="Mediterrânea Delicia" />
+        <h3>Mediterrânea Delicia</h3>
+        <div>R$75.99 <span>80.99</span></div>
+        <a href="#">Adicionar ao carrinho</a>
       </div>
-    </section>
 
-    <!--Menu-->
-    <section id="menu">
-      <h1><span>Nosso </span>menu</h1>
-      <div class="box-container">
-        <div class="box">
-          <img src="images/pizza_item_1.jpg" alt="Explosão de peperoni" />
-          <h3>Explosão de peperoni</h3>
-          <div>R$55.99 <span>60.99</span></div>
-          <a href="#">Adicionar ao carrinho</a>
-        </div>
-
-        <div class="box">
-          <img src="images/pizza_item_2.jpg" alt="Aventuras Vegetais" />
-          <h3>Aventuras Vegetais</h3>
-          <div>R$45.99 <span>60.99</span></div>
-          <a href="#">Adicionar ao carrinho</a>
-        </div>
-
-        <div class="box">
-          <img src="images/pizza_item_3.jpg" alt="Mediterrânea Delicia" />
-          <h3>Mediterrânea Delicia</h3>
-          <div>R$75.99 <span>80.99</span></div>
-          <a href="#">Adicionar ao carrinho</a>
-        </div>
-
-        <div class="box">
-          <img src="images/pizza_item_4.jpg" alt="Pomodoro do Campo" />
-          <h3>Pomodoro do Campo</h3>
-          <div>R$45.99 <span>50.99</span></div>
-          <a href="#">Adicionar ao carrinho</a>
-        </div>
-
-        <div class="box">
-          <img src="images/pizza_item_5.jpg" alt="Lusitana Colorida" />
-          <h3>Lusitana Colorida</h3>
-          <div>R$55.99 <span>60.99</span></div>
-          <a href="#">Adicionar ao carrinho</a>
-        </div>
-
-        <div class="box">
-          <img src="images/pizza_item_6.jpg" alt="Saborosa Lava" />
-          <h3>Saborosa Lava</h3>
-          <div>R$55.99 <span>100.00</span></div>
-          <a href="#">Adicionar ao carrinho</a>
-        </div>
+      <div class="box">
+        <img src="images/pizza_item_4.jpg" alt="Pomodoro do Campo" />
+        <h3>Pomodoro do Campo</h3>
+        <div>R$45.99 <span>50.99</span></div>
+        <a href="#">Adicionar ao carrinho</a>
       </div>
-    </section>
 
-    <!--Products / Promoções-->
-    <section id="Products">
-      <h1><span>Combos e </span>Promoções</h1>
-      <div class="box-container">
-        <div class="box">
-          <div>
-            <a href="#menu"><ion-icon name="cart"></ion-icon></a>
-            <a href="#"><ion-icon name="heart"></ion-icon></a>
-            <a href="#"><ion-icon name="eye"></ion-icon></a>
-          </div>
-          <div>
-            <img src="images/promo_1.jpg" alt="Pizza com coca-cola" />
-          </div>
-          <div>
-            <h3>Pizza + Refrigerante 2L</h3>
-            <div>
-              <i><ion-icon name="star"></ion-icon></i>
-              <i><ion-icon name="star"></ion-icon></i>
-              <i><ion-icon name="star"></ion-icon></i>
-              <i><ion-icon name="star"></ion-icon></i>
-            </div>
-          </div>
-          <div>R$65.00 <span>a partir</span></div>
-        </div>
-
-        <div class="box">
-          <div>
-            <a href="#menu"><ion-icon name="cart"></ion-icon></a>
-            <a href="#"><ion-icon name="heart"></ion-icon></a>
-            <a href="#"><ion-icon name="eye"></ion-icon></a>
-          </div>
-          <div>
-            <img src="images/promo_2.jpg" alt="Pizza com lata de pepsi" />
-          </div>
-          <div>
-            <h3>Pizza + Refrigerante 350ml</h3>
-            <div>
-              <i><ion-icon name="star"></ion-icon></i>
-              <i><ion-icon name="star"></ion-icon></i>
-              <i><ion-icon name="star"></ion-icon></i>
-              <i><ion-icon name="star"></ion-icon></i>
-              <i><ion-icon name="star"></ion-icon></i>
-            </div>
-          </div>
-          <div>R$50.00 <span>a partir</span></div>
-        </div>
-        <div class="box">
-          <div>
-            <a href="#menu"><ion-icon name="cart"></ion-icon></a>
-            <a href="#"><ion-icon name="heart"></ion-icon></a>
-            <a href="#"><ion-icon name="eye"></ion-icon></a>
-          </div>
-          <div>
-            <img src="images/promo_3.jpg" alt="Pizza com coca-cola" />
-          </div>
-          <div>
-            <h3>Pizza + Refrigerante 600ml</h3>
-            <div>
-              <i><ion-icon name="star"></ion-icon></i>
-              <i><ion-icon name="star"></ion-icon></i>
-              <i><ion-icon name="star"></ion-icon></i>
-              <i><ion-icon name="star"></ion-icon></i>
-              <ion-icon name="star-half"></ion-icon>
-            </div>
-          </div>
-          <div>R$55.00 <span>a partir</span></div>
-        </div>
+      <div class="box">
+        <img src="images/pizza_item_5.jpg" alt="Lusitana Colorida" />
+        <h3>Lusitana Colorida</h3>
+        <div>R$55.99 <span>60.99</span></div>
+        <a href="#">Adicionar ao carrinho</a>
       </div>
-    </section>
 
-    <!--Review /Avaliações-->
-    <section id="review">
-      <h1><span>O que nossos </span> clientes dizem</h1>
+      <div class="box">
+        <img src="images/pizza_item_6.jpg" alt="Saborosa Lava" />
+        <h3>Saborosa Lava</h3>
+        <div>R$55.99 <span>100.00</span></div>
+        <a href="#">Adicionar ao carrinho</a>
+      </div>
+    </div>
+  </section>
 
-      <div class="box-container">
-        <div class="box">
+  <!--Products / Promoções-->
+  <section id="Products">
+    <h1><span>Combos e </span>Promoções</h1>
+    <div class="box-container">
+      <div class="box">
+        <div>
+          <a href="#menu"><ion-icon name="cart"></ion-icon></a>
+          <a href="#"><ion-icon name="heart"></ion-icon></a>
+          <a href="#"><ion-icon name="eye"></ion-icon></a>
+        </div>
+        <div>
+          <img src="images/promo_1.jpg" alt="Pizza com coca-cola" />
+        </div>
+        <div>
+          <h3>Pizza + Refrigerante 2L</h3>
+          <div>
+            <i><ion-icon name="star"></ion-icon></i>
+            <i><ion-icon name="star"></ion-icon></i>
+            <i><ion-icon name="star"></ion-icon></i>
+            <i><ion-icon name="star"></ion-icon></i>
+          </div>
+        </div>
+        <div>R$65.00 <span>a partir</span></div>
+      </div>
+
+      <div class="box">
+        <div>
+          <a href="#menu"><ion-icon name="cart"></ion-icon></a>
+          <a href="#"><ion-icon name="heart"></ion-icon></a>
+          <a href="#"><ion-icon name="eye"></ion-icon></a>
+        </div>
+        <div>
+          <img src="images/promo_2.jpg" alt="Pizza com lata de pepsi" />
+        </div>
+        <div>
+          <h3>Pizza + Refrigerante 350ml</h3>
+          <div>
+            <i><ion-icon name="star"></ion-icon></i>
+            <i><ion-icon name="star"></ion-icon></i>
+            <i><ion-icon name="star"></ion-icon></i>
+            <i><ion-icon name="star"></ion-icon></i>
+            <i><ion-icon name="star"></ion-icon></i>
+          </div>
+        </div>
+        <div>R$50.00 <span>a partir</span></div>
+      </div>
+      <div class="box">
+        <div>
+          <a href="#menu"><ion-icon name="cart"></ion-icon></a>
+          <a href="#"><ion-icon name="heart"></ion-icon></a>
+          <a href="#"><ion-icon name="eye"></ion-icon></a>
+        </div>
+        <div>
+          <img src="images/promo_3.jpg" alt="Pizza com coca-cola" />
+        </div>
+        <div>
+          <h3>Pizza + Refrigerante 600ml</h3>
+          <div>
+            <i><ion-icon name="star"></ion-icon></i>
+            <i><ion-icon name="star"></ion-icon></i>
+            <i><ion-icon name="star"></ion-icon></i>
+            <i><ion-icon name="star"></ion-icon></i>
+            <ion-icon name="star-half"></ion-icon>
+          </div>
+        </div>
+        <div>R$55.00 <span>a partir</span></div>
+      </div>
+    </div>
+  </section>
+
+  <!--Review /Avaliações-->
+  <section id="review">
+    <h1><span>O que nossos </span> clientes dizem</h1>
+
+    <div class="box-container">
+      <div class="box">
         <p>
           Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quidem,
           deleniti totam, necessitatibus aliquam porro laudantium minima
           inventore repellat commodi saepe tempora consequuntur sit vel!
           Accusamus quis veniam harum non aspernatur?
           <img src="images/cliente_1.jpg" alt="Foto de um rapaz">
-          <h3>Alon Pinheiro</h3>
-          <div>
-            <i><ion-icon name="star"></ion-icon></i>
-            <i><ion-icon name="star"></ion-icon></i>
-            <i><ion-icon name="star"></ion-icon></i>
-            <i><ion-icon name="star"></ion-icon></i>
-            <i><ion-icon name="star-half"></ion-icon></i>
-          </div>
-        </p>
+        <h3>Alon Pinheiro</h3>
+        <div>
+          <i><ion-icon name="star"></ion-icon></i>
+          <i><ion-icon name="star"></ion-icon></i>
+          <i><ion-icon name="star"></ion-icon></i>
+          <i><ion-icon name="star"></ion-icon></i>
+          <i><ion-icon name="star-half"></ion-icon></i>
         </div>
+        </p>
+      </div>
 
-        <div class="box">
+      <div class="box">
         <p>
           Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quidem,
           deleniti totam, necessitatibus aliquam porro laudantium minima
           inventore repellat commodi saepe tempora consequuntur sit vel!
           Accusamus quis veniam harum non aspernatur?
           <img src="images/cliente_2.jpg" alt="Foto de um rapaz">
-          <h3>João Lira</h3>
-          <div>
-            <i><ion-icon name="star"></ion-icon></i>
-            <i><ion-icon name="star"></ion-icon></i>
-            <i><ion-icon name="star"></ion-icon></i>
-            <i><ion-icon name="star"></ion-icon></i>
-            <i><ion-icon name="star"></ion-icon></i>
+        <h3>João Lira</h3>
+        <div>
+          <i><ion-icon name="star"></ion-icon></i>
+          <i><ion-icon name="star"></ion-icon></i>
+          <i><ion-icon name="star"></ion-icon></i>
+          <i><ion-icon name="star"></ion-icon></i>
+          <i><ion-icon name="star"></ion-icon></i>
 
-            
-          </div>
-        </p>
+
         </div>
+        </p>
+      </div>
 
-        <div class="box">
+      <div class="box">
         <p>
           Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quidem,
           deleniti totam, necessitatibus aliquam porro laudantium minima
           inventore repellat commodi saepe tempora consequuntur sit vel!
           Accusamus quis veniam harum non aspernatur?
           <img src="images/cliente_3.jpg" alt="Foto de um rapaz">
-          <h3>daniel Porto</h3>
-          <div>
-            <i><ion-icon name="star"></ion-icon></i>
-            <i><ion-icon name="star"></ion-icon></i>
-            <i><ion-icon name="star"></ion-icon></i>
-            <i><ion-icon name="star-half"></ion-icon></i>
-          </div>
+        <h3>daniel Porto</h3>
+        <div>
+          <i><ion-icon name="star"></ion-icon></i>
+          <i><ion-icon name="star"></ion-icon></i>
+          <i><ion-icon name="star"></ion-icon></i>
+          <i><ion-icon name="star-half"></ion-icon></i>
+        </div>
         </p>
+      </div>
+    </div>
+  </section>
+
+  <!--Footer / Rodapé-->
+  <footer class=" footer">
+    <div class="container">
+      <div class="footer-col">
+        <h4 class="heading-footer">Pizza <span>Hash</span></h4>
+        <ul>
+          <li>
+            <a href="#about">Sobre nós</a>
+          </li>
+          <li>
+            <a href="#menu">
+              <Menu /a>
+          </li>
+          <li>
+            <a href="#">Politica de Privacidade</a>
+          </li>
+          <li>
+            <a href="#">Termos de Serviço</a>
+          </li>
+        </ul>
+      </div>
+
+      <div class="footer-col">
+        <h4 class="heading-footer">Obtenha <span>Ajuda</span></h4>
+        <ul>
+          <li>
+            <a href="#">Faq</a>
+          </li>
+          <li>
+            <a href="#">Devolições<Menu /a>
+          </li>
+          <li>
+            <a href="#">Opções de Pagamento</a>
+          </li>
+        </ul>
+      </div>
+      <div class="footer-col">
+        <h4 class="reading-footer">Siga <span>-nos</span></h4>
+        <div class="social-links">
+          <a href="#"><ion-icon name="logo-facebook"></ion-icon></a>
+          <a href="#"><ion-icon name="logo-instagram"></ion-icon></a>
+          <a href="#"><ion-icon name="logo-linkedin"></ion-icon></a>
+          <a href="#"><ion-icon name="logo-twitter"></ion-icon></a>
         </div>
       </div>
-    </section>
 
-    <!--Footer / Rodapé-->
-    <footer class=" footer">
-      <div class="container">
-        <div class="footer-col">
-          <h4 class="heading-footer">Pizza <span>Hash</span></h4>
-</div>
+    </div>
+    <div class="footer-bottom">
+      <p>&copy; 2024 PizzaHash. Todos os direitos reservados.</p>
+    </div>
+  </footer>
+  <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
+  <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
+</body>
 
-      </div>
-
-    </footer>
-
-    <!--Star-->
-    <!--<ion-icon name="star-half"></ion-icon> hal star-->
-    <!--<ion-icon name="logo-facebook"></ion-icon> facebook-->
-    <!--<ion-icon name="logo-instagram"></ion-icon> instagram-->
-    <!--<ion-icon name="logo-twitter"></ion-icon> Twiter-->
-    <!--<ion-icon name="logo-linkedin"></ion-icon> Linkedin-->
-  </body>
 </html>
