--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 
   <!--Sobre/ About-->
   <section id="about">
-    <h1><span>Sobre </span>nós</h1>
+    <h1 class="heading"><span>Sobre </span>nós</h1>
     <div>
       <img src="images/sobre.jpg" alt="Uma pizzaria em uma esquina" />
     </div>
@@ -69,7 +69,7 @@
 
   <!--Menu-->
   <section id="menu">
-    <h1><span>Nosso </span>menu</h1>
+    <h1 class="heading"><span>Nosso </span>menu</h1>
     <div class="box-container">
       <div class="box">
         <img src="images/pizza_item_1.jpg" alt="Explosão de peperoni" />
@@ -117,7 +117,7 @@
 
   <!--Products / Promoções-->
   <section id="Products">
-    <h1><span>Combos e </span>Promoções</h1>
+    <h1 class="heading"><span>Combos e </span>Promoções</h1>
     <div class="box-container">
       <div class="box">
         <div>
@@ -187,7 +187,7 @@
 
   <!--Review /Avaliações-->
   <section id="review">
-    <h1><span>O que nossos </span> clientes dizem</h1>
+    <h1 class="heading"><span>O que nossos </span> clientes dizem</h1>
 
     <div class="box-container">
       <div class="box">
@@ -298,6 +298,7 @@
       <p>&copy; 2024 PizzaHash. Todos os direitos reservados.</p>
     </div>
   </footer>
+
   <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
   <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
 </body>
