Add header and .btn styles; add classes in HTML
Apply CSS classes to header elements and CTAs and add styles for a fixed header and reusable button. HTML changes add class="header" to the header, class="logo" to the logo link, class="navbar" to the nav, and class="btn" to multiple call-to-action links. CSS additions define .btn (appearance and hover), .header layout (fixed positioning, padding, border, z-index), logo sizing, and navbar styles to ensure consistent header and button presentation.

--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
 
 <body>
   <!--HEADER-->
-  <header>
-    <a href="#">
+  <header class="header">
+    <a href="#" class="logo">
       <img src="images/logo.jpg" alt="Logo da pizzaria PizzaHash" />
     </a>
-    <nav>
+    <nav class="navbar">
       <a href="#home">home</a>
       <a href="#about">sobre</a>
       <a href="#menu">menu</a>
@@ -38,7 +38,7 @@
         Descubra o sabos autêntico das nossas pizzas artesanais, preparadas
         com ingredientes frescos e de alta qualidade.
       </p>
-      <a href="#">Faça o seu pedido</a>
+      <a href="#" class="btn">Faça o seu pedido</a>
     </div>
   </section>
 
@@ -63,7 +63,7 @@
         artesanais para criar massas incrivelmente leves e crocantes e nossos
         molhos são feitos a partir de tomates e especiarias únicas.
       </p>
-      <a href="#">Saiba mias</a>
+      <a href="#" class="btn">Saiba mias</a>
     </div>
   </section>
 
@@ -75,42 +75,42 @@
         <img src="images/pizza_item_1.jpg" alt="Explosão de peperoni" />
         <h3>Explosão de peperoni</h3>
         <div>R$55.99 <span>60.99</span></div>
-        <a href="#">Adicionar ao carrinho</a>
+        <a href="#" class="btn">Adicionar ao carrinho</a>
       </div>
 
       <div class="box">
         <img src="images/pizza_item_2.jpg" alt="Aventuras Vegetais" />
         <h3>Aventuras Vegetais</h3>
         <div>R$45.99 <span>60.99</span></div>
-        <a href="#">Adicionar ao carrinho</a>
+        <a href="#" class="btn">Adicionar ao carrinho</a>
       </div>
 
       <div class="box">
         <img src="images/pizza_item_3.jpg" alt="Mediterrânea Delicia" />
         <h3>Mediterrânea Delicia</h3>
         <div>R$75.99 <span>80.99</span></div>
-        <a href="#">Adicionar ao carrinho</a>
+        <a href="#" class="btn">Adicionar ao carrinho</a>
       </div>
 
       <div class="box">
         <img src="images/pizza_item_4.jpg" alt="Pomodoro do Campo" />
         <h3>Pomodoro do Campo</h3>
         <div>R$45.99 <span>50.99</span></div>
-        <a href="#">Adicionar ao carrinho</a>
+        <a href="#" class="btn">Adicionar ao carrinho</a>
       </div>
 
       <div class="box">
         <img src="images/pizza_item_5.jpg" alt="Lusitana Colorida" />
         <h3>Lusitana Colorida</h3>
         <div>R$55.99 <span>60.99</span></div>
-        <a href="#">Adicionar ao carrinho</a>
+        <a href="#" class="btn">Adicionar ao carrinho</a>
       </div>
 
       <div class="box">
         <img src="images/pizza_item_6.jpg" alt="Saborosa Lava" />
         <h3>Saborosa Lava</h3>
         <div>R$55.99 <span>100.00</span></div>
-        <a href="#">Adicionar ao carrinho</a>
+        <a href="#" class="btn">Adicionar ao carrinho</a>
       </div>
     </div>
   </section>
