Add header icons styles and menu button id
Add class="icons" to the header icons container and id="menu-btn" to the menu icon so it can be targeted. Update CSS: normalize navbar color to "white", add text-decoration:none, style .header .icons for layout, size and hover behavior for ion-icons, add visited link color, and hide #menu-btn by default (prepares for responsive menu behavior).

--- a/index.html
+++ b/index.html
@@ -21,11 +21,11 @@
       <a href="#products">promoções</a>
       <a href="#review">avaliações</a>
     </nav>
-    <div>
+    <div class="icons">
       <div><ion-icon name="person"></ion-icon></div>
       <div><ion-icon name="search"></ion-icon></div>
       <div><ion-icon name="cart"></ion-icon></div>
-      <div><ion-icon name="menu"></ion-icon></div>
+      <div id="menu-btn"><ion-icon name="menu"></ion-icon></div>
     </div>
   </header>
 
