Add .content class and home hero styles
Add a class="content" to the home section wrapper in index.html and introduce styles for the home hero in style.css. The new CSS defines a full-height .home hero with background image, a dark overlay (::before) for contrast, layout rules for .home .content (max-width and stacking), and typography for the hero h3 and p to ensure readable white text and spacing.

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
   <!--Home-->
 
   <section id="home">
-    <div>
+    <div class="content">
       <h3>bem vindo a PizzaHash!</h3>
       <p>
         Descubra o sabos autêntico das nossas pizzas artesanais, preparadas
