--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
   <!--Home-->
 
-  <section id="home">
+  <section class="home">
     <div class="content">
       <h3>bem vindo a PizzaHash!</h3>
       <p>
