--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
   <!--Home-->
 
-  <section class="home">
+  <section class="home" id="home">
     <div class="content">
       <h3>bem vindo a PizzaHash!</h3>
       <p>
@@ -43,13 +43,14 @@
   </section>
 
   <!--Sobre/ About-->
-  <section id="about">
+  <section class="about"  id="about">
     <h1 class="heading"><span>Sobre </span>nós</h1>
-    <div>
+    <div class="row">
+    <div class="image">
       <img src="images/sobre.jpg" alt="Uma pizzaria em uma esquina" />
     </div>
 
-    <div>
+    <div class="content">
       <h3>O que torna a PizzaHass única?</h3>
       <p>
         Na PizzaHash, não é apenas sobre pizza- É sobre criar experiências
@@ -65,55 +66,58 @@
       </p>
       <a href="#" class="btn">Saiba mias</a>
     </div>
-  </section>
-
-  <!--Menu-->
-  <section id="menu">
-    <h1 class="heading"><span>Nosso </span>menu</h1>
-    <div class="box-container">
-      <div class="box">
-        <img src="images/pizza_item_1.jpg" alt="Explosão de peperoni" />
-        <h3>Explosão de peperoni</h3>
-        <div>R$55.99 <span>60.99</span></div>
-        <a href="#" class="btn">Adicionar ao carrinho</a>
-      </div>
-
-      <div class="box">
-        <img src="images/pizza_item_2.jpg" alt="Aventuras Vegetais" />
-        <h3>Aventuras Vegetais</h3>
-        <div>R$45.99 <span>60.99</span></div>
-        <a href="#" class="btn">Adicionar ao carrinho</a>
-      </div>
-
-      <div class="box">
-        <img src="images/pizza_item_3.jpg" alt="Mediterrânea Delicia" />
-        <h3>Mediterrânea Delicia</h3>
-        <div>R$75.99 <span>80.99</span></div>
-        <a href="#" class="btn">Adicionar ao carrinho</a>
-      </div>
-
-      <div class="box">
-        <img src="images/pizza_item_4.jpg" alt="Pomodoro do Campo" />
-        <h3>Pomodoro do Campo</h3>
-        <div>R$45.99 <span>50.99</span></div>
-        <a href="#" class="btn">Adicionar ao carrinho</a>
-      </div>
-
-      <div class="box">
-        <img src="images/pizza_item_5.jpg" alt="Lusitana Colorida" />
-        <h3>Lusitana Colorida</h3>
-        <div>R$55.99 <span>60.99</span></div>
-        <a href="#" class="btn">Adicionar ao carrinho</a>
-      </div>
-
-      <div class="box">
-        <img src="images/pizza_item_6.jpg" alt="Saborosa Lava" />
-        <h3>Saborosa Lava</h3>
-        <div>R$55.99 <span>100.00</span></div>
-        <a href="#" class="btn">Adicionar ao carrinho</a>
-      </div>
     </div>
   </section>
+
+   <!-- MENU -->
+    <section class="menu" id="menu">
+      <h1 class="heading">Nosso <span>menu</span> </h1>
+
+      <div class="box-container">
+        <div class="box">
+          <img src="images/pizza_item_1.jpg" alt="Explosão de Pepperoni">
+          <h3>Explosão de Pepperoni</h3>
+          <div class="price"> R$55.99 <span>60.99</span></div>
+          <a href="#" class="btn">Adicionar ao carrinho</a>
+        </div>
+
+        <div class="box">
+          <img src="images/pizza_item_2.jpg" alt="Aventuras Vegetais">
+          <h3>Aventuras Vegetais</h3>
+          <div class="price"> R$45.99 <span>60.99</span></div>
+          <a href="#" class="btn">Adicionar ao carrinho</a>
+        </div>
+
+        <div class="box">
+          <img src="images/pizza_item_3.jpg" alt="Mediterrânea Delícia">
+          <h3>Mediterrânea Delícia</h3>
+          <div class="price"> R$75.99 <span>80.99</span></div>
+          <a href="#" class="btn">Adicionar ao carrinho</a>
+        </div>
+
+        <div class="box">
+          <img src="images/pizza_item_4.jpg" alt="Pomodoro do Campo">
+          <h3>Pomodoro do Campo</h3>
+          <div class="price"> R$45.99 <span>50.99</span></div>
+          <a href="#" class="btn">Adicionar ao carrinho</a>
+        </div>
+
+        <div class="box">
+          <img src="images/pizza_item_5.jpg" alt="Lusitana Colorida">
+          <h3>Lusitana Colorida</h3>
+          <div v> R$55.99 <span>60.99</span></div>
+          <a href="#" class="btn">Adicionar ao carrinho</a>
+        </div>
+
+        <div class="box">
+          <img src="images/pizza_item_6.jpg" alt="Saborosa Lava">
+          <h3>Saborosa Lava</h3>
+          <div class="price"> R$85.99 <span>100.99</span></div>
+          <a href="#" class="btn">Adicionar ao carrinho</a>
+        </div>
+      </div>
+    </section>
+
 
   <!--Products / Promoções-->
   <section id="Products">
